# python-project-lvl2

./: .coverage  .gitignore  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: linter_and_tests.yml
gendiff/: __init__.py  args_parser.py  const.py  constants.py  diff_tree.py  difference.py  file_reader.py  gendiff_engine.py  generate.py  parser.py  parser_data.py  parser_file.py
gendiff/formatters/: __init__.py  format_json.py  format_plain.py  format_stylish.py  get_format.py  json.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  main.py
tests/: test_format_plain_value.py  test_function.py  test_gendiff.py  test_generate.py  test_parser.py
tests/fixtures/: diff_file_tree_text.txt  parser_output.txt  result_json.txt  result_stylish.txt
tests/fixtures/wrong/: wrong.json  wrong.yml
