[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Show diff between two files"
authors = ["mrJonson <mr.Jonson@mail.ru>"]
packages = [
  {include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.8"
PyYAML = "^6.0"
pytest-cov = "^3.0.0"
pytest = "^6.2.5"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^6.2.5"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
